[package]
name = "mu_alb"
description = "Alternative AWS Lambda Runtime designed to listen ALB HTTP requests"
version = "0.2.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/miere/mu-rs"
categories = ["web-programming::http-server"]
keywords = ["AWS", "Lambda", "API"]
authors = ["Miere Teixeira <miere.teixeira@gmail.com>"]
readme = "../../README.md"

[lib]

[dependencies]
aws_lambda_events = "^0.5.0"
http = "0.2.5"
serde = "1.0.130"
serde_json = "1.0.69"
mu_runtime = { path = "../mu_runtime", version = "0.2.0" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
httpmock = "0.5.8"

[features]
multi_header = []
